# pico-container-c

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  project_name.txt
.devcontainer/: Dockerfile  devcontainer.json
